test/fail/NothingAppliedToHiddenArg.agda
module NothingAppliedToHiddenArg where

bad = {x}

